- Creacion de archivo para almacenar la estructura comun del sitio (main-layout).
- Captura del contenido de las vistas e inclusion de main-layout.
MEJORAS:
+ Vistas mas simples y faciles de entender.
+ Facilidad para realizar cambios a la estructura visual de la aplicacion.

ACTUALIZACION 5
<< Implementacion de Arquitectura MVC >>
- Creacion de funciones que encapsulen la logica de negocio (modelo).
- Uso de funciones del modelo en los controladores.
- El modelo lanza excepciones cuando ocurren errores inesperados.
- La pagina de error ahora muestra la informacion a partir de la excepcion capturada.
MEJORAS:
+ Controladores liberados de manejar la logica de acceso a bases de datos.

ACTUALIZACION 6
<< Implementacion de Patron Active Record >>
- Modelo:
	- Superclase Model (reutilizacion para todos los modelos):
		- Encapsulacion de errores.
		- Implementacion de asignacion masiva para asignar todos los campos del modelo.
	- Encapsulacion de los campos de las tablas de bases de datos en clases de modelo.
- Vista:
	- Uso de notacion de arreglos en nombres de campos de formulario.
- Controlador:
	- Actualizacion de logica usando objetos de modelo.
MEJORAS:
+ Controladores liberados del manejo de:
	+ Errores de validacion del modelo.
	+ Campos de tablas de base de datos.

ACTUALIZACION 7
<< Implementacion de Patron Front Controller >>
- Creacion de archivo controlador tranformando funcionalidad de antiguos controladores
	como funciones (acciones).
- Responsabilidades del controlador frontal (liberando de trabajo a las acciones):
	- Consultar la ruta proporcionada por el usuario y ejecutarla.
	- Configurar toda la aplicacion (configurar reportes de errores, activar uso de sesiones, etc.).
	- Agregar librerias para toda la aplicacion.
	- Manejo de errores inesperados ocurridos en las acciones.
- Actualizacion de hipervinculos de las vistas hacia al controlador frontal.
- Organizacion de vistas.
MEJORAS:
+ Controladores y vistas mas organizados.